--- a/H1-NamingIdentifiers/Orders/P2_LinqQueries.csproj
+++ b/H1-NamingIdentifiers/Orders/P2_LinqQueries.csproj
@@ -42,12 +42,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DataMapper.cs" />
-    <Compile Include="Models\category.cs" />
+    <Compile Include="Models\Category.cs" />
     <Content Include="Data\orders.txt" />
-    <Compile Include="Models\order.cs" />
-    <Compile Include="Models\product.cs" />
+    <Compile Include="Models\Order.cs" />
+    <Compile Include="Models\Product.cs" />
     <Content Include="Data\products.txt" />
-    <Compile Include="Program.cs" />
+    <Compile Include="TestClass.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
