--- a/H2-CodeFormatting/P1_ReformatCode/P1_ReformatCode.csproj
+++ b/H2-CodeFormatting/P1_ReformatCode/P1_ReformatCode.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{E2B7BED8-5433-40ED-9870-4E775782E5ED}</ProjectGuid>
+    <ProjectGuid>{371B40D7-B8D9-4FD5-A6F5-B6FDBEC912DC}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Application2</RootNamespace>
-    <AssemblyName>Application2</AssemblyName>
+    <RootNamespace>P1_ReformatCode</RootNamespace>
+    <AssemblyName>P1_ReformatCode</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -41,9 +41,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Minesweeper.cs" />
+    <Compile Include="Event.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Ranking.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
