--- a/H1-NamingIdentifiers/P3_Game/P3_Game.csproj
+++ b/H1-NamingIdentifiers/P3_Game/P3_Game.csproj
@@ -7,7 +7,7 @@
     <ProjectGuid>{E2B7BED8-5433-40ED-9870-4E775782E5ED}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Application2</RootNamespace>
+    <RootNamespace>P3_Game</RootNamespace>
     <AssemblyName>Application2</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
