--- a/H1-NamingIdentifiers/P3_Game/P3_Game.csproj
+++ b/H1-NamingIdentifiers/P3_Game/P3_Game.csproj
@@ -43,7 +43,7 @@
   <ItemGroup>
     <Compile Include="Minesweeper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Ranking.cs" />
+    <Compile Include="Player.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
