--- a/H2-CodeFormatting/P1_ReformatCode/P1_ReformatCode.csproj
+++ b/H2-CodeFormatting/P1_ReformatCode/P1_ReformatCode.csproj
@@ -42,6 +42,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Event.cs" />
+    <Compile Include="EventHolder.cs" />
+    <Compile Include="Messages.cs" />
+    <Compile Include="Application.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
