--- a/H3-CodeDocumentationAndComments/P2_InterfacesDocumentation/MyTunesShop/MyTunesShop.csproj
+++ b/H3-CodeDocumentationAndComments/P2_InterfacesDocumentation/MyTunesShop/MyTunesShop.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{32DFC7B0-AF14-4339-BBDF-17003612E4B3}</ProjectGuid>
+    <ProjectGuid>{8719EA82-DFF4-4154-9119-0AEBA2EF601B}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>P2_InterfacesDocumentation</RootNamespace>
-    <AssemblyName>P2_InterfacesDocumentation</AssemblyName>
+    <RootNamespace>MyTunesShop</RootNamespace>
+    <AssemblyName>MyTunesShop</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -41,7 +41,24 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Album.cs" />
+    <Compile Include="Band.cs" />
+    <Compile Include="ExtendedMyTunesEngine.cs" />
+    <Compile Include="IAlbum.cs" />
+    <Compile Include="IBand.cs" />
+    <Compile Include="IMedia.cs" />
+    <Compile Include="IPerformer.cs" />
+    <Compile Include="IRateable.cs" />
+    <Compile Include="ISong.cs" />
+    <Compile Include="MyTunesEngine.cs" />
+    <Compile Include="MyTunesShopProgram.cs" />
+    <Compile Include="Performer.cs" />
+    <Compile Include="PerformerType.cs" />
+    <Compile Include="Printer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SalesInfo.cs" />
+    <Compile Include="Singer.cs" />
+    <Compile Include="Song.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
