--- a/H5-HighQualityClasses/Abstraction/Abstraction.csproj
+++ b/H5-HighQualityClasses/Abstraction/Abstraction.csproj
@@ -36,7 +36,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Circle.cs" />
-    <Compile Include="Figure.cs" />
+    <Compile Include="IFigure.cs" />
     <Compile Include="FiguresExample.cs" />
     <Compile Include="Rectangle.cs" />
   </ItemGroup>
