--- a/H7-CodeTuningAndOptimization/MathOperations/MathOperations.csproj
+++ b/H7-CodeTuningAndOptimization/MathOperations/MathOperations.csproj
@@ -1,16 +1,17 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="4.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+<Project ToolsVersion="14.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{840DED57-5767-4E3F-BCF1-CF91ECDFA1C8}</ProjectGuid>
+    <ProjectGuid>{A1C8226E-97D0-4A8E-A1D8-EDCB35CBFE35}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Assertions_Homework</RootNamespace>
-    <AssemblyName>Assertions-Homework</AssemblyName>
-    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
+    <RootNamespace>MathOperations</RootNamespace>
+    <AssemblyName>MathOperations</AssemblyName>
+    <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -21,7 +22,6 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <UseVSHostingProcess>true</UseVSHostingProcess>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -39,16 +39,24 @@
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
+    <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AssertionsTest.cs" />
-    <Compile Include="Utils\OperationElementsUtil.cs" />
-    <Compile Include="Utils\SearchAlgorithmUtil.cs" />
-    <Compile Include="Utils\SortAlgorithmUtil.cs" />
+    <Compile Include="Tests\DecimalFunctionPerformance.cs" />
+    <Compile Include="Tests\DecimalMathPerformance.cs" />
+    <Compile Include="Tests\DoubleFunctionPerformance.cs" />
+    <Compile Include="Tests\DoubleMathPerformance.cs" />
+    <Compile Include="Tests\FloatFunctionPerformance.cs" />
+    <Compile Include="Tests\FloatMathPerformance.cs" />
+    <Compile Include="Tests\IntegerMathPerformance.cs" />
+    <Compile Include="MathOperationTest.cs" />
+    <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Tests\LongMathPerformance.cs" />
+    <Compile Include="Util.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="Properties\" />
+    <None Include="App.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
